Adds more mario style texts all over the stages

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.70.0"
+    "phaser": "^3.80.1",
+    "phaser3-rex-plugins": "^1.80.2"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
