--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "gameanalytics": "^4.4.7",
     "phaser": "^3.80.1",
-    "phaser3-rex-plugins": "^1.80.2"
+    "phaser3-rex-plugins": "^1.80.5"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
